--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-  <h1>MEAN Authentication App</h1>
-  <p class="lead">Welcome to our custom MEAN authentication application built from scratch</p>
+  <h1>Paint Company</h1>
+  <p class="lead">Welcome to our custom Paint Company ERP</p>
   <div>
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
@@ -17,7 +17,7 @@
     <p>Angular-CLI to generate componets, services and more.</p>
   </div>
   <div class="col-md-4">
-    <h3>JWT Tockens</h3>
-    <p>Full featured authentication using JSON web tokens.</p>
+    <h3>MongoDB</h3>
+    <p>Database</p>
   </div>
 </div>
