--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
-<h2 class="page-header">Welcome to (COMPANY_NAME) Shop</h2>
+
+<h2 class="page-header">Welcome to Smith's Paint Shop</h2>
 <div class="row">
     <div class="col-md-4 list-group">
         <h3 style="text-align:center">Paint Colors</h3>
@@ -74,7 +74,3 @@
   </div>
 
 
-=======
-<h2 class="page-header">Dashboard</h2>
-<p>Welcome to your Dashboard</p>
->>>>>>> fc675ac47c44944d493864465cb4dbde8509a96f
