--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,23 +1,23 @@
 <div class="jumbotron text-center">
-  <h1>Paint Company</h1>
+  <h1>Smith's Paint Shop</h1>
   <p class="lead">Welcome to our custom Paint Company ERP</p>
   <div>
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
-    <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
+    <a class="btn btn-info" [routerLink]="['/login']">Login</a>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-4">
-    <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose.</p>
+    <h3>COL 1</h3>
+    <p>Text Filler</p>
   </div>
   <div class="col-md-4">
-    <h3>Angular-CLI</h3>
-    <p>Angular-CLI to generate componets, services and more.</p>
+    <h3>COL 2</h3>
+    <p>Text Filler</p>  
   </div>
   <div class="col-md-4">
-    <h3>MongoDB</h3>
-    <p>Database</p>
+    <h3>COL 3</h3>
+    <p>Text Filler</p>  
   </div>
 </div>
