--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -5,6 +5,9 @@
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-info" [routerLink]="['/login']">Login</a>
   </div>
+  <div>
+    <a class="btn btn-danger" [routerLink]="['/managerLogin']">MGR</a>
+  </div>
 </div>
 
 <div class="row">
