--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<h2 class="page-header">Welcome to Smith's Paint Shop</h2>
+<h2 class="page-header" align="center">Welcome to Smith's Paint Shop</h2>
 <div class="row">
     <div class="col-md-4 list-group">
         <h3 style="text-align:center">Paint Colors</h3>
