--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     <a class="btn btn-info" [routerLink]="['/login']">Login</a>
   </div>
   <div>
-    <a class="btn btn-danger" [routerLink]="['/managerLogin']">MGR</a>
+    <a class="btn btn-danger" [routerLink]="['/inventory']">MGR</a>
   </div>
 </div>
 
