--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-info" [routerLink]="['/login']">Login</a>
   </div>
-  <div>
-    <a class="btn btn-danger" [routerLink]="['/inventory']">MGR</a>
+  <div class="row">
+    <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
   </div>
 </div>
 
