--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -7,6 +7,7 @@
   </div>
   <div class="row">
     <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
+    <a class="btn btn-danger" [routerLink]="['/paint']">Paint</a>
   </div>
 </div>
 
