--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -8,6 +8,7 @@
   <div class="row">
     <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
     <a class="btn btn-danger" [routerLink]="['/paint']">Paint</a>
+    <a class="btn btn-danger" [routerLink]="['/roller']">Roller</a>
   </div>
 </div>
 
