Moved roller/brush/paint buttons to inventory page

--- a/angular-src/src/app/components/inventory/inventory.component.html
+++ b/angular-src/src/app/components/inventory/inventory.component.html
@@ -1,116 +1,12 @@
 
+<div class="jumbotron text-center">
+  <h1>Smith's Paint Inventory</h1>
+  <p class="lead">Welcome to our custom Paint Company ERP</p>
+  <div>
+    <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
+    <a class="btn btn-danger" [routerLink]="['/paint']">Paint</a>
+    <a class="btn btn-danger" [routerLink]="['/roller']">Roller</a>
+  </div>
+</div>
 
  
-  <h2>Our Inventory</h2>
- 
-  <br>
-  <table style="width:50%; float:left">
-    <caption>Paint Collection</caption>
-    <tr>
-      <th>ItemID</th>
-      <th>ItemName</th>
-      <th>Size(/Gal)</th> 
-      <th>Price(/Gal)</th>
-    </tr>
-    <tr>
-      <td>110</td>
-      <td>Paint123</td>
-      <td>10</td>
-      <td>1.75</td>
-    </tr>
-    <tr>
-      <td>111</td>
-      <td>Red234</td>
-      <td>12</td>
-      <td>1.50</td>
-    </tr>
-    <tr>
-      <td>112</td>
-      <td>Gray987</td>
-      <td>10</td>
-      <td>1.75</td>
-    </tr>
-    </table>
-    <table style="width:50%;float:right">
-      <caption>Brush Collection</caption>
-      <tr>
-        <td>ItemID</td>
-        <th>ItemName</th>
-        <th>ItemID</th> 
-        <th>Price(/Gal)</th>
-      </tr>
-      <tr>
-          <td>210</td>
-        <td>Brush123</td>
-        <td>12345</td>
-        <td>1.15</td>
-      </tr>
-      <tr>
-          <td>220</td>
-        <td>Brush1234</td>
-        <td>12</td>
-        <td>1.50</td>
-      </tr>
-      <tr>
-        <td>230</td>
-        <td>Brush987</td>
-        <td>15</td>
-        <td>1.75</td>
-      </tr>
-    </table>
-    <table style="width:50%;float:right">
-      <caption>Roller Collection</caption>
-      <tr>
-        <td>ItemID</td>
-        <th>ItemName</th>
-        <th>ItemID</th> 
-        <th>Price(/Gal)</th>
-      </tr>
-      <tr>
-          <td>310</td>
-        <td>Roller123</td>
-        <td>15</td>
-        <td>1.2</td>
-      </tr>
-      <tr>
-        <td>320</td>
-        <td>Roller345</td>
-        <td>10</td>
-        <td>1.2</td>
-      </tr>
-      <tr>
-        <td>330</td>
-        <td>Roller987</td>
-        <td>12</td>
-        <td>1.0</td>
-      </tr>
-    </table>
-    <table style="width:50%; float:left">
-      <caption>Roller Pan Collection</caption>
-      <tr>
-        <td>ItemID</td>
-        <th>ItemName</th>
-        <th>ItemID</th> 
-        <th>Price(/Gal)</th>
-      </tr>
-      <tr>
-          <td>410</td>
-        <td>RollerPan1234</td>
-        <td>10</td>
-        <td>1.68</td>
-      </tr>
-      <tr>
-          <td>420</td>
-        <td>RollerPan987</td>
-        <td>12</td>
-        <td>1.25</td>
-      </tr>
-      <tr>
-          <td>430</td>
-        <td>RollerPan987</td>
-        <td>12</td>
-        <td>1.75</td>
-      </tr>
-      </table>
- 
-   
