--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -5,10 +5,8 @@
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-info" [routerLink]="['/login']">Login</a>
   </div>
-  <div class="row">
-    <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
-    <a class="btn btn-danger" [routerLink]="['/paint']">Paint</a>
-    <a class="btn btn-danger" [routerLink]="['/roller']">Roller</a>
+  <div>
+    <a class="btn btn-danger" [routerLink]="['/inventory']">Inventory</a>
   </div>
 </div>
 
