--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,76 +1,99 @@
-
-<h2 class="page-header" align="center">Welcome to Smith's Paint Shop</h2>
 <div class="row">
-    <div class="col-md-4 list-group">
-        <h3 style="text-align:center">Paint Colors</h3>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">Pure White</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Color: White</li>
-                <li>Container Size: 1 Quart</li>
-                <li>Price: $9.34</li>
-            </ul>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">Crimison Red</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Color: Red</li>
-                <li>Container Size: 1 Quart</li>
-                <li>Price: $8.67</li>
-            </ul>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">Lime Green</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Color: Green</li>
-                <li>Container Size: 1 Quart</li>
-                <li>Price: $8.57</li>
-            </ul>
-        </a>
-    </div>
-    <div class="col-md-4 list-group">
-        <h3 style="text-align:center">Brushes</h3>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">4 in. Chip Brush</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Brush Size: 4 inches</li>
-                <li>Handle Material: Wood</li>
-                <li>Price: $3.44</li>
-            </ul>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">3 in. Flat Brush</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Brush Size: 3 inches</li>
-                <li>Handle Material: Plastic</li>
-                <li>Price: $7.94</li>
-            </ul>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">1 in. Chip Brush</h5>
-            </div>
-            <ul style="list-style-type:none">
-                <li>Brush Size: 1 inches</li>
-                <li>Handle Material: Plastic</li>
-                <li>Price: $7.94</li>
-            </ul>
-        </a>
-    </div>
-    <div class="col-md-4 list-group">
-        <h3 style="text-align:center">Rollers</h3>
 
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item One</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
     </div>
   </div>
 
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item Two</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
 
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item Three</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item Four</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item Five</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="#">Item Six</a>
+        </h4>
+        <h5>$24.99</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
+
+</div>
