--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <h1>Smith's Paint Shop</h1>
-  <p class="lead">Welcome to our custom Paint Company ERP</p>
+  <p class="lead">Welcome to our custom Paint Company ERP test</p>
   <div>
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-info" [routerLink]="['/login']">Login</a>
