--- a/angular-src/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/angular-src/src/app/components/shopping-cart/shopping-cart.component.html
@@ -2,12 +2,16 @@
 <h2 class="page-header" align="center">Shopping Cart</h2>
 <div class="row">
     <div class="col-md-4 list-group">
-            <ul style="list-style-type:none"></ul>
-            <li>Items in cart: </li>
-            <li>Subtotal: </li>
-            <li>Tax: </li>
+            <ul style="list-style-type:none" *ngFor="let item of items">
+            <li>item:{{item.name}} </li>
+            <li>color: {{item.color}}</li>
+            <li>price: {{item.price}}</li>
+            </ul>
+            <li>Items in cart: {{totalItems}}</li>
+            <!-- <li>Subtotal: </li> -->
+            <!-- <li>Tax: </li> -->
             <li>Estimated Delivery: </li>
-            <li>Total: </li>
+            <li>Total:{{totalPrice}} </li>
             <div>
                 <a class="btn btn-primary" [routerLink]="['/checkout']">Checkout</a>
             </div>
