--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -31,147 +31,26 @@
         </a> -->
 <div class="row">
 
-  <div class="col-lg-4 col-md-6 mb-4">
+  <div class="col-lg-4 col-md-6 mb-4" *ngFor="let item of items">
     <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/042397/042397610066lg.jpg" alt="">
+      <img class="card-img-top" src='{{item.image}}' alt="">
       <div class="card-body">
         <h4 class="card-title">
-          Valspar Signature Flat Latex Paint
+          {{item.title}}
         </h4>
-        <h5>$32.98</h5>
-        <p class="card-text">Easily covers existing colors and provides a smooth, even finish. Ideal for low-traffic areas of your home such as living rooms, dinning rooms and bedrooms
+        <h5>${{item.price}}</h5>
+        <p class="card-text"> {{item.description}}
         </p>
       </div>
       <div class="card-footer">
         <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+        
       </div>
+      <button class="btn btn-primary" (click)="addToCart(item)">Add to Cart</button>
     </div>
+  </div>
+  <div class="col-sm-12 col-md-12 text-right" style="position: fixed; bottom: 0;">
+      <button class="btn btn-lg btn-block btn-success text-uppercase" [routerLink]="['/shopping-cart']" >Shopping Cart</button>
   </div>
 
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/042397/042397593710lg.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          Valspar 2000 Eggshell Pastel Base Latex Paint
-        </h4>
-        <h5>$35.98</h5>
-        <p class="card-text">Durable paint + primer offers great coverage over existing colors, with time-saving primer built right in.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/035777/035777879658lg.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          Sherwin-Williams Semi-gloss Tint Base Paint
-        </h4>
-        <h5>$38.99</h5>
-        <p class="card-text"> Ideal for high-moisture, high traffic areas of your home such as kitchens, bathrooms and laundry rooms. Applies easily in just one coat, guaranteed; One-coat coverage backed by our Lifetime Warranty</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/732087/732087909142lg.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-         Blue Hawk 3-Pack Polyester Flat And Angle 2.5-in Paint Brush
-        </h4>
-        <h5>$14.50</h5>
-        <p class="card-text">Professional quality tapered filaments for smooth painted finish</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/692773/6927732900337.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          Project Source 9-Pack Foam Flat 3-in Paint Brush
-        </h4>
-        <h5>$5.98</h5>
-        <p class="card-text">Set includes three each of a 1-in, 2-in and 3-in brushes. Brush head equipped for better paint absorption. Can be used with all types of paints and stains.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/692773/6927732970149lg.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          Project Source 3-Pack Utility Polyester Flat And Angle 3-in Paint Brush
-        </h4>
-        <h5>$8.97</h5>
-        <p class="card-text">Can be used with all types of paints and stains. Set contains a 2-in. angle brush, a 2-in. flat cut brush and a 3-in. flat cut brush. Ideal for medium projects touch ups.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/024964/024964224685.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          Wagner Smart Roller 7.25-in Inner-Fed Paint Roller
-        </h4>
-        <h5>$24.99</h5>
-        <p class="card-text">Plastic handle has an integrated paint reservoir that eliminates need for paint tray. Polyester knit roller cover is compatible with water-based and oil-based paints and stains. Internally fed 9 inches x 3/8 inches roller provides continuous, even paint coverage
-        </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/732087/732087976465.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">
-          WHIZZ 6-in Cabinet and Door Foam Mini Paint Roller
-        </h4>
-        <h5>$5.98</h5>
-        <p class="card-text">Ideal for use on cabinets and doors. Provides for a smooth finish. Made with high density foam</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="https://mobileimages.lowes.com/product/converted/732087/732087960006.jpg" alt="">
-      <div class="card-body">
-        <h4 class="card-title">WHIZZ 4-in MICROLON Walls and Ceilings Synthetic Blend Mini Paint Roller</h4>
-        <h5>14.98</h5>
-        <p class="card-text">MICROLON™ is new fabric technology that can only be found on WHIZZ rollers. Engineered for today's premium paints and paint plus primers. Works great with all primers and are a great choice when using flat, eggshell and satin sheens</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-      </div>
-    </div>
-  </div>
 </div>
