Test the CRUD in Brush collection

--- a/angular-src/src/app/components/inventory/inventory.component.html
+++ b/angular-src/src/app/components/inventory/inventory.component.html
@@ -6,6 +6,7 @@
     <a class="btn btn-danger" [routerLink]="['/brush']">Brush</a>
     <a class="btn btn-danger" [routerLink]="['/paint']">Paint</a>
     <a class="btn btn-danger" [routerLink]="['/roller']">Roller</a>
+    <a class="btn btn-danger" [routerLink]="['/roller-pan']">Roller Pan</a>
   </div>
 </div>
 
