--- a/angular-src/src/app/components/paint-edit/paint-edit.component.html
+++ b/angular-src/src/app/components/paint-edit/paint-edit.component.html
@@ -1,3 +1,23 @@
-<p>
-  paint-edit works!
-</p>
+<div class="button-row">
+  <a mat-raised-button color="primary" [routerLink]="['/paint']"><mat-icon>list</mat-icon></a>
+</div>
+<form [formGroup]="paintForm" (ngSubmit)="onFormSubmit(paintForm.value)">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="itemNumber" formControlName="itemNumber">
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="color" formControlName="color">
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="quantity" formControlName="quantity">
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Price" formControlName="price">
+  </mat-form-field>
+  <div class="button-row">
+    <button type="submit" [disabled]="!paintForm.valid" mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
+  </div>
+</form>
