--- a/angular-src/src/app/components/brush/brush.component.html
+++ b/angular-src/src/app/components/brush/brush.component.html
@@ -45,6 +45,5 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/book-details/', row._id]"></tr>
-  </table>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/brush-detail/', row._id]"></tr>  </table>
 </div>
