--- a/angular-src/src/app/components/roller-pan-edit/roller-pan-edit.component.html
+++ b/angular-src/src/app/components/roller-pan-edit/roller-pan-edit.component.html
@@ -1,13 +1,9 @@
 <div class="button-row">
-  <a mat-raised-button color="primary" [routerLink]="['/roller']"><mat-icon>list</mat-icon></a>
+  <a mat-raised-button color="primary" [routerLink]="['/roller-pan']"><mat-icon>list</mat-icon></a>
 </div>
-<form [formGroup]="rollerForm" (ngSubmit)="onFormSubmit(rollerForm.value)">
+<form [formGroup]="rollerpanForm" (ngSubmit)="onFormSubmit(rollerpanForm.value)">
   <mat-form-field class="example-full-width">
     <input matInput placeholder="PartNumber" formControlName="PartNumber">
-  </mat-form-field>
-
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Brand" formControlName="Brand">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
@@ -26,7 +22,8 @@
     <input matInput placeholder="Price" formControlName="Price">
   </mat-form-field>
   <div class="button-row">
-    <button type="submit" [disabled]="!rollerForm.valid" mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
+    <button type="submit" [disabled]="!rollerpanForm.valid" mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
   </div>
 </form>
+
 
