--- a/angular-src/src/app/components/roller-pan/roller-pan.component.html
+++ b/angular-src/src/app/components/roller-pan/roller-pan.component.html
@@ -1,5 +1,5 @@
 <div class="button-row">
-  <a mat-raised-button color="primary" [routerLink]="['/roller-create']"><mat-icon>add</mat-icon></a>
+  <a mat-raised-button color="primary" [routerLink]="['/roller-pan-create']"><mat-icon>add</mat-icon></a>
 </div>
 
 <div class="example-container mat-elevation-z8">
@@ -12,12 +12,6 @@
     <ng-container matColumnDef="PartNumber">
       <th mat-header-cell *matHeaderCellDef> Part Number </th>
       <td mat-cell *matCellDef="let element" class="isbn-col"> {{element.PartNumber}} </td>
-    </ng-container>
-
-    <!-- Title Column -->
-    <ng-container matColumnDef="Brand">
-      <th mat-header-cell *matHeaderCellDef> Brand </th>
-      <td mat-cell *matCellDef="let element"> {{element.Brand}} </td>
     </ng-container>
 
     <!-- Author Column -->
@@ -45,6 +39,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/roller-detail/', row._id]"></tr>
-  </table>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/roller-pan-detail/', row._id]"></tr>  </table>
 </div>
+
